--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@angular/platform-browser-dynamic": "5.2.3",
     "@angular/router": "5.2.3",
     "@angular/upgrade": "5.2.3",
+    "angular-calendar": "^0.23.7",
     "bootstrap": "4.0.0",
     "chart.js": "2.7.1",
     "core-js": "2.5.3",
     "flag-icon-css": "2.9.0",
     "font-awesome": "^4.7.0",
     "moment": "2.20.1",
+    "ng-bootstrap": "^1.6.3",
     "ng2-charts": "1.6.0",
     "ngx-bootstrap": "2.0.2",
     "rxjs": "5.5.6",
