--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@angular/platform-browser-dynamic": "5.2.3",
     "@angular/router": "5.2.3",
     "@angular/upgrade": "5.2.3",
+    "angularfire2": "^5.0.0-rc.6.0",
     "bootstrap": "4.0.0",
     "chart.js": "2.7.1",
     "core-js": "2.5.3",
+    "firebase": "^4.12.1",
     "flag-icon-css": "2.9.0",
     "font-awesome": "^4.7.0",
     "moment": "2.20.1",
